# fakeGPU

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  NVITOP_SOLUTION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  TODOs.md  USAGE_CUDART.md  USAGE_GUIDE.md  build_debug.sh  build_release.sh  cuda_example.py  demo_usage.py  design.md  fakegpu_nvitop.py  fakegpu_nvitop.sh  fgpu  find_missing_symbols.sh  ftest  mkdocs.yml  pyproject.toml  pytorch_example.py  run_nvitop_once.sh  run_test_clean.sh  setup.cfg  setup.py  show_gpu_info.py  test_logging.py  test_nvitop_diagnostic.sh  test_nvitop_wrapper.py  test_nvml_minimal.c  test_nvml_version.c  test_summary.py
.github/workflows/: docs.yml  release.yml
docs/: cublaslt-fix.md  cublaslt-fix.zh.md  distributed-sim-usage.md  distributed-sim-usage.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  multi-node-design.md  multi-node-design.zh.md  project-structure.md  project-structure.zh.md  quick-reference.md  quick-reference.zh.md  reports-and-validation.md  reports-and-validation.zh.md
fakegpu/: __init__.py  __main__.py  _api.py  _version.py
profiles/: a100.yaml  a40.yaml  b100.yaml  b200.yaml  gtx980.yaml  h100.yaml  l40s.yaml  p100.yaml  t4.yaml  v100.yaml
research_poc/: intercept.c  target.c
scripts/linux/: nvitop_once.sh  vm_gpu_mgmt.sh
scripts/macos/: colima_nvitop_once.sh  linux_vm_gpu_mgmt.sh
src/core/: CMakeLists.txt  backend_config.hpp  device.cpp  device.hpp  dl_intercept.cpp  global_state.cpp  global_state.hpp  gpu_profile.cpp  gpu_profile.hpp  hybrid_memory_manager.hpp  logging.hpp  real_cuda_loader.hpp
src/cublas/: cublas_defs.hpp  cublas_stubs.cpp
src/cuda/: CMakeLists.txt  cuda_defs.hpp  cuda_driver_defs.hpp  cuda_driver_passthrough.hpp  cuda_driver_stubs.cpp  cuda_mode_dispatch.hpp  cuda_stubs.cpp  cudart_defs.hpp  cudart_passthrough.hpp  cudart_stubs.cpp
src/distributed/: CMakeLists.txt  cluster_config.cpp  cluster_config.hpp  cluster_coordinator.cpp  cluster_coordinator.hpp  collective_allgather.cpp  collective_alltoall.cpp  collective_executor.hpp  collective_reducescatter.cpp  collective_slice_plan.hpp  communicator.cpp  communicator.hpp  coordinator_main.cpp  staging_chunk_plan.hpp  topology_model.cpp  transport.hpp  transport_local.cpp  transport_tcp.cpp
src/monitor/: CMakeLists.txt  monitor.cpp  monitor.hpp
src/nccl/: CMakeLists.txt  nccl_defs.hpp  nccl_mode_dispatch.hpp  nccl_passthrough.cpp  nccl_passthrough.hpp  nccl_stubs.cpp
src/nvml/: CMakeLists.txt  nvml_defs.hpp  nvml_stubs.cpp
test/: README.md  README_QWEN_TEST.md  compare_results.py  run_comparison.sh  run_ddp_multinode.sh  run_full_comparison.sh  run_multinode_sim.sh  run_qwen_comparison.sh  run_transformers_test.sh  test_comparison.py  test_cuda_direct.py  test_cudart_basic.py  test_ddp_multinode.py  test_ddp_simple.py  test_example.py  test_hybrid_multinode.py  test_load_qwen2_5.py  test_pytorch_basic.py  test_pytorch_with_cublas.py  test_transformers.py  test_transformers_simple.py
test/output/: TEST_SUMMARY.md  ddp_multinode_2r_gap_report.md  ddp_multinode_4r_cluster_report.json  ddp_multinode_4r_gap_report.md  ddp_multinode_4r_validation_report.md  fakegpu_output.txt  real_gpu_output.txt
tools/: fakegpu_uv_deps.py
verification/: check_cluster_report.py  check_report.py  compare_parity_outputs.py  nccl_proxy_worker.py  passthrough_parity_qwen2_5.py  run_mode1_test.sh  run_nvidia_smi_test.sh  run_passthrough_test.sh  run_python_test.sh  run_pytorch_analysis.sh  run_smoke.sh  test_allgather_correctness.py  test_alltoall_correctness.py  test_cluster_config.py  test_cluster_config_invalid.py  test_cluster_config_main.cpp  test_cluster_config_valid.py  test_collective_direct.cpp  test_cpu_sim_matmul.py  test_cublas_cpu_sim.cpp  test_cudart_event_capture.py  test_driver_api.c  test_gpu.py  test_group_semantics.py  test_group_semantics_main.cpp  test_memory_types.py  test_mode.c  test_multi_arch_compute_units.py  test_nccl_direct.cpp  test_nccl_proxy.py  test_nvml_direct.c  test_nvml_pynvml.py  test_passthrough.py  test_pytorch.py  test_pytorch_detailed.py  test_reducescatter_correctness.py  test_remote_coordinator.py  verify_preload.c
verification/data/: cluster_invalid_duplicate_rank.yaml  cluster_invalid_gap_rank.yaml  cluster_proxy_1r.yaml  cluster_proxy_2r.yaml  cluster_valid.yaml
