[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.14"]
build-backend = "setuptools.build_meta"

[tool.fakegpu.uv]
# Dependency sets consumed by scripts (especially for macOS→Linux VM flows).
# Keep these under `[tool.*]` to avoid impacting the setuptools packaging config.
linux_vm_gpu_mgmt = [
  "nvidia-ml-py>=12.0.0",
  "gpustat>=1.1.1",
]
