[metadata]
name = fakegpu
version = attr: fakegpu._version.__version__
description = CUDA/NVML interception library that simulates GPU devices (Python wrapper)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = linux, macos
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: C++
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.package_data]
fakegpu = _native/*

[options.entry_points]
console_scripts =
    fakegpu = fakegpu.__main__:main
